--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,17 @@
   box-sizing: border-box;
 }
 
+html{
+  height: 100%;
+  scroll-behavior: smooth;
+}
 body{
-  font-family: 'Rubik', 'Arial',  sans-serif;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: "Rubik", "Arial",  sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
@@ -16,29 +25,118 @@ body{
 
 .container{
   width: 100%;
-  max-width: 1440px;
-  margin-right: 120px;
-  margin-left: 120px;
+  max-width: 1240px;
+  margin-right: 20px;
+  margin-left: 20px;
   margin-right: auto;
   margin-left: auto;
 }
 /* SITE HEADER */
 
-.header{
-  background-color: #e6e4e4;
+.site-header{
+
 }
 
-.site-name-box{
+/* SITE-HEADER TOP */
+
+.site-header-top {
+  background: #F6F6F6;
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #fff;
+}
+.site-header-top-container{
+  display: flex;
+  align-items: center;
+
 }
 
-.site-name{
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 28px;
-  color: #7296EE;
-  padding: 9px 6px;
+.site-logo{
+  margin-right: 30px;
+}
+.site-logo:hover{
+  opacity: 0.8;
+}
+
+.site-logo:active{
+  opacity: 0.6;
+}
+.currency-rates {
+  display: flex;
+  align-items:center;
   margin: 0;
+  padding: 0;
+  margin-right: auto;
+  list-style: none;
+}
+.currency-rates-item:not(:last-child) {
+  margin-right: 25px;
+}
+
+.currency-rates-tipe {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  color: #2959ce;
+}
+.currency-rates-value {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  color:#555555;
+}
+
+/* LANG TOGGLE */
+.lang-toggle {
+  display: flex;
+  padding: 3px;
+  background: #DCE6FF;
+  border-radius: 39px;
+  margin-right: 25px;
+}
+.lang-toggle-link {
+  margin: 0;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  line-height: 30px;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 30px;
+  text-align: center;
+  text-decoration: none;
+  color: #a6a6a6;
+}
+
+.lang-toggle-link:active {
+  background-color: #fff;
+
+}
+.lang-toggle-link-active {
+  background-color: #fff;
+  color:#000000;
+}
+
+/* BOTTON */
+.botton {
+  font-size: 16px;
+  line-height: 19px;
+  font-weight: 500;
+  display: inline-block;
+  text-align: center;
+  padding: 13px 20px;
+  text-decoration: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.botton-primary {
+  background: #7296ec;
+  color:#fff;
+}
+
+botton-primary:hover{
+  opacity: 0.8;
+}
+
+botton-primary:active{
+  opacity: 0.6;
 }
