--- a/css/style.css
+++ b/css/style.css
@@ -141,8 +141,9 @@ body{
   color:#000000;
 }
 
-/* BOTTON */
-.botton {
+/* BUTTON */
+.button {
+  border:none;
   font-size: 16px;
   line-height: 19px;
   font-weight: 500;
@@ -153,16 +154,20 @@ body{
   border-radius: 10px;
   cursor: pointer;
 }
-.botton-primary {
+.button-primary {
   background: #7296ec;
   color:#fff;
 }
 
-botton-primary:hover{
+.button-orange {
+  background: #F78B3B;
+}
+
+button:hover{
   opacity: 0.8;
 }
 
-botton-primary:active{
+button:active{
   opacity: 0.6;
 }
 
@@ -221,4 +226,92 @@ botton-primary:active{
 
 .site-header-banner-img{
   border-radius: 9px
+}
+
+/* GRID NEWS */
+.top-news {
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 50px;
+  margin-left: -10px;
+}
+
+.grid-item {
+  width: 393px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+
+.article-card {
+  display: flex;
+  flex-direction: column;
+  padding: 20px 17px 15px;
+  border-radius: 15px;
+  background: #F6F6F6;
+}
+.article-card-heading {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 26px;
+  font-style: normal;
+  margin-bottom: 10px;
+}
+.article-card-link {
+  display: inline-block;
+  text-decoration: none;
+  color: #000000;
+}
+.article-card-link:hover {
+  color:#7296ec;
+}
+
+.article-card-link:active {
+  opacity: 0.6;
+}
+
+.article-card-text{
+  margin-top: 0px;
+  margin-bottom: 15px;
+}
+
+.article-card-img {
+  margin-top: auto;
+  display: block;
+  width: 360px;
+  height: 165px;
+  border-radius: 10px;
+  margin-bottom: 15px;
+}
+.article-card-footer {
+  display: flex;
+  align-items: center;
+}
+.article-card-source-icon {
+  display: block;
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+.article-card-source-time {
+  font-size: 12px;
+  line-height: 14px;
+  color: #5e5f61;
+}
+
+/* NOTIFICATION CTA  */
+.notification-cta {
+  border-radius: 10px;
+  width: 1050px;
+  margin: 60px 75px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #e67878;
+  padding: 24px 71px 24px 29px;
+}
+.notification-cta-text {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 26px;
+  color: #000000;
 }
