--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,10 @@ button:active{
   padding-bottom: 12px;
   padding-top: 12px;
   border-bottom: 1px solid #d1d1d1;
+
+}
+
+.site-nav:not(:last-child){
   margin-bottom: 40px;
 }
 .site-nav-list {
@@ -620,5 +624,57 @@ footer *:focus{
   width: 25px;
   height: 25px;
   object-fit: contain;
+}
 
+/* FORM */
+
+.form-fields{
+  margin-bottom: 20px;
+}
+
+.form-field-wrapper{
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-field-wrapper .form-group{
+  width: calc(50% - 5px);
+}
+
+.form-group:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.form-field {
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  padding: 18px 20px;
+  border-radius: 10px;
+  background: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.form-field-textarea {
+  min-height: 180px;
+  resize: vertical;
+}
+
+  /* CONTACT-SECTION */
+.contact-page {
+  margin-top: 10px;
+}
+
+.contact-page-form{
+  display: flex;
+  flex-direction: column;
+  width: 696px;
+}
+.contact-page-content {
+  width: 100%;
+  max-width: 696px;
+}
+
+.contact-page-form-submet{
+  align-self: flex-end;
 }
