--- a/css/style.css
+++ b/css/style.css
@@ -724,3 +724,16 @@ footer *:focus{
   line-height: 19px;
   margin: 0;
 }
+
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (   min--moz-device-pixel-ratio: 2),
+only screen and (     -o-min-device-pixel-ratio: 2/1),
+only screen and (        min-device-pixel-ratio: 2),
+only screen and (                min-resolution: 192dpi),
+only screen and (                min-resolution: 2dppx) {
+
+  .notification-cta {
+    background-image: url(../imgs/notification-cta-bg@2x.jpg);
+  }
+}
