--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,20 @@
-*{
+html{
   box-sizing: border-box;
+  height: 100%;
+  scroll-behavior: smooth;
+}
+
+*,
+::before,
+::after{
+box-sizing: inherit;
 }
 
 *:focus{
   outline: 5px dotted #7296ec;
   outline-offset: 3px;
 }
-html{
-  height: 100%;
-  scroll-behavior: smooth;
-}
+
 body{
   display: flex;
   flex-direction: column;
@@ -26,6 +31,17 @@ body{
 
 }
 
+/* VISUALLY HIDDEN */
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 
 /* CONTAINER */
 
@@ -168,10 +184,20 @@ body{
   color:#ffffff;
 }
 
+.button-big{
+  color: #FFF;
+  line-height: 28px;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: normal;
+  padding: 15px 40px;
+}
+
 .button-block{
   display: block;
   width: 100%;
 }
+
 button:hover{
   opacity: 0.8;
 }
@@ -724,6 +750,63 @@ footer *:focus{
   line-height: 19px;
   margin: 0;
 }
+
+/* MODAL */
+.modal{
+  display: none;
+  position: fixed;
+  z-index: 999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 50px;
+  padding-top: 250px;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-open{
+  display: block;
+}
+
+.modal-dealog{
+  width: 100%;
+  max-width: 850px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.modal-content{
+  position: relative;
+  background-color: #fff;
+  padding: 50px;
+  border-radius: 20px;
+}
+.modal-close{
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  display: block;
+  border: none;
+  background-color: transparent;
+}
+.modam-lead{
+  color: #000;
+  text-align: center;
+  font-size: 26px;
+  font-weight: 500;
+  line-height: 34px;
+  margin-top: 0;
+  margin-bottom: 25px;
+}
+
+.modal-actions{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
 
 @media
 only screen and (-webkit-min-device-pixel-ratio: 2),
